[FEATURE] get_stats and get_tags API described

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swagger_api",
+  "name": "SMKs_Open_API",
   "version": "0.0.1",
   "private": true,
   "description": "Swagger API Project",
