--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.12.3",
     "q": "^1.4.1",
     "request": "^2.74.0",
+    "request-promise": "^4.1.1",
     "solr-client": "^0.6.0",
     "swagger-express-mw": "^0.1.0",
     "swagger-tools": "^0.10.1"
