--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "request": "^2.74.0",
     "request-promise": "^4.1.1",
     "solr-client": "^0.6.0",
+    "sprintf": "^0.1.5",
+    "sprintf-js": "^1.0.3",
     "swagger-express-mw": "^0.1.0",
     "swagger-tools": "^0.10.1"
   },
