--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "",
   "main": "app.js",
   "dependencies": {
+    "child_process": "^1.0.2",
     "express": "^4.12.3",
     "q": "^1.4.1",
     "request": "^2.74.0",
